<resources>
    <string name="app_name">Todo</string>
    <string name="title_todo_detail">Todo Detail</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is not valid</string>
    <string name="error_incorrect_auth">Error by auth</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="todoNameLabelText">Name</string>
    <string name="todoDescLabelText">Beschreibung</string>
    <string name="todoSolvedLabelText">Erledigt</string>
    <string name="todoFavLabelText">Favorit</string>
    <string name="todoFinalDateLabelText">Fällig</string>
    <string name="item_sort_title_date">Sort Date</string>
    <string name="item_sort_title_fav">Sort Fav</string>
    <string name="todoListItemTitle">Todoeintrag</string>
    <string name="todoListItemFavTitle">Fav</string>
    <string name="todoListItemSolvedTitle">Solved</string>
    <string name="item_delete">Delete</string>
    <string name="item_contacts">Contacts</string>
</resources>
